# TCP-Server-Client-project

./: .gitignore  LICENSE  README.md
Client/: CMakeLists.txt  Message.pb.h  Message.proto  app.cpp  app.h  client.cpp  client.h  clientmanager.cpp  clientmanager.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  view.cpp  view.h
Server/: CMakeLists.txt  Message.pb.cc  app.cpp  app.h  commands.txt  main.cpp  mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  networkmanager.cpp  networkmanager.h  server.cpp  server.h
